--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,3 +2,4 @@
 VITE_API_BASE_URL="http://localhost:4000"
 # In Railway, set VITE_API_BASE_URL to the deployed backend URL (e.g. https://backend-production-aa6c6.up.railway.app)
 VITE_YOUTUBE_API_KEY=""
+VITE_GEMINI_API_KEY=""
