--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^16.2.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^8.17.10",
     "@tanstack/react-query": "^5.90.11",
     "axios": "^1.6.2",
     "clsx": "^2.1.0",
@@ -16,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
+    "three": "^0.182.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
